<resources>
    <string name="app_name">TablaturApp_PF</string>
    <string name="searchView_emptyListText">¡Busca tu canción o artista favorito!</string>
    <string name="artistView_songsList">Lista de canciones:</string>
    <string name="subscriptionView_title">¡Obtené tu usuario premium!</string>
    <string name="subscriptionView_body">Como usuario premium podrás obtener los siguientes beneficios:</string>
    <string name="subscriptionView_subscribe">SUSCRIBIRSE</string>
    <string name="forgotPassword_title">Recuperar contraseña</string>
    <string name="forgotPassword_attention">¡ATENCIÓN!</string>
    <string name="forgotPassword_disclaimer">Ingresá tu email para que podamos enviarte un correo para recuperar tu contraseña. En caso de no ver el correo, es posible que se encuentre dentro de spam.</string>
    <string name="forgotPassword_button">Enviar Correo</string>
    <string name="forgotPassword_email">Email</string>
    <string name="learningList_button">Volver a generar ruta</string>
</resources>
