<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.app.SubscriptionFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscriptionView_title"
        android:textColor="#4b3f72"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/tv_body"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:text="@string/subscriptionView_body"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/subscribe_btn"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button"
        android:text="@string/subscriptionView_subscribe"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="~ Creá tu ruta de aprendizaje personalizada"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="- Agregá tus canciones favoritas"
            android:textAlignment="textEnd"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:text="- Canciones de tus artistas sin límites"
            android:textAlignment="textEnd"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="15dp"
            android:text="~ Libre de anuncios"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>